spectec/test/elab/neg/type-typ-invalid-tparam.t
  $ ./main.exe type-typ-invalid-tparam.spectec 2>&1
  error[elab/typ-invalid-tparam]: invalid type parameter
    --> type-typ-invalid-tparam.spectec:4:8
    |
  4 | syntax foo<T_1> = nat
    |        ^^^^
    |
    | source: elab
  [1]
